home/Deployments/frigate/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate-svc
  namespace: frigate-system
spec:
  selector:
    app: frigate-app
  ports:
    - port: 5000
      name: web
      protocol: TCP
    - port: 8554
      name: RTSP-feeds
      protocol: TCP
    - port: 8555
      name: webrtc-tcp
      protocol: TCP
    - port: 8555
      name: webrtc-udp
      protocol: UDP
