home/Deployments/frigate/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ingress
  namespace: frigate-system
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: frigate-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx-internal
  rules:
  - host: security.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frigate-svc
            port:
              number: 5000
